--- a/portfolio.html
+++ b/portfolio.html
@@ -256,6 +256,21 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe">
+                <h2 class="subscribe-title">
+                    Подпишитесь на рассылку
+                </h2>
+                <form class="subscribe-form">
+                    <input class="subscribe-input" type="email" placeholder="E-mail" required>
+                    <button class="subscribe-button" type="submit">Подписаться
+                        <svg class="subscribe-icon">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+
+                </form>
+            </div>
+
         </div>
     </footer>
 
