Отредактировал после проверки валидатором

--- a/index.html
+++ b/index.html
@@ -421,14 +421,14 @@
 
                 <label class="modal-form-label">
                     Имя
-                    <input class="modal-form-input" name="user-name" type="name" required>
+                    <input class="modal-form-input" name="user-name" type="text" required>
                     <svg class="modal-form-icon">
                         <use href="./images/icons.svg#icon-form-person"></use>
                     </svg>
                 </label>
                 <label class="modal-form-label">
                     Телефон
-                    <input class="modal-form-input" type="tell" pattern="[0-9]{10}" title="0999009909" required>
+                    <input class="modal-form-input" type="tel" pattern="[0-9]{10}" title="0999009909" required>
                     <svg class="modal-form-icon">
                         <use href="./images/icons.svg#icon-form-phone"></use>
                     </svg>
